<resources>
    <string name="app_name">Handy Way</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="profile">Профиль</string>
    <string name="orders">Мои покупки</string>
    <string name="return_">Возврат</string>
    <string name="support">Тех. поддержка</string>
    <string name="main">Главная</string>
    <string name="cart">Корзина</string>
    <string name="exit">Выйти из профиля</string>
    <string name="search">Поиск</string>
    <string name="about">О приложении</string>


    <string name="fio">Ф.И.О.</string>
    <string name="inn">ИНН</string>
    <string name="phone">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="buy">Купить</string>
    <string name="addToCart">Добавить в конзину</string>
    <string name="login">Войти</string>
    <string name="noInternetConnection">Не соеденение с интернетом!</string>
    <string name="unexpedtedError">Произошла неожиданная ошибка!</string>
    <string name="sendToDev">Отправить разработчикам</string>
    <string name="blockedUser">Ваш профиль заблокирован! <br /> Свяжитесь с администраторами для получения допольнительной информации.</string>

    <string name="invalid_tel_pass">Неверный номар телефона или пароль</string>
    <string name="loading">Загрузка данных...</string>
    <string name="empty">Пусто!</string>
    <string name="confirm_exit">Подтвердите выход из профилья</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="adres">Адрес</string>
    <string name="phone_num">Номер телефона</string>
    <string name="landmark">Ориентир</string>
    <string name="wholesaler">Оптовик</string>
    <string name="summ">сумм</string>
    <string name="min_quanity">Минимальное количество для заказа</string>
    <string name="max_quanity">Количество товаров на складе</string>
    <string name="arrange_order">Отправить заказ</string>
    <string name="clear_cart">Очистить корзину</string>
    <string name="confirm_action">Подтвердите действие</string>
    <string name="cart_is_empty">Корзина покупок пусто!</string>
    <string name="confirm_arrange_order">Подтвердите отправку заказа.\nПосле отправки вы можете внести изменения на ваш заказ в течении часа</string>
    <string name="remove_from_cart">Удалить из корзины</string>
    <string name="sended">Ваш заказ успешно отправлено!</string>
    <string name="to_main">На главную</string>
    <string name="description">Описание:</string>
    <string name="payment_method">Метод оплаты:</string>
    <string name="in_stock">В наличии:</string>
    <string name="price">Цена</string>
    <string name="added_to_cart">Товар добавлен в корзину!</string>
    <string name="go_to_cart">Перейти в корзину</string>
    <string name="search_">Поиск</string>
    <string name="at_least">Минимум 3 буквы для поиска!</string>
    <string name="no_results">Поиск не дал результатов!</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="order_status">Статус заказа</string>
    <string name="order">Заказ</string>
    <string name="order_status_sended">Отправлено</string>
    <string name="order_status_approved">Одобрено</string>
    <string name="order_status_declined">Отклонено</string>
    <string name="select_order">Выберите заказ для возврата</string>
    <string name="confirm_return">Вы точно хотите совершить возврат заказа №</string>
    <string name="order_date">Дата заказа: </string>
    <string name="not_available">Нет в наличии</string>
    <string name="save_changes">Сохранить измемения</string>
    <string name="cancel_order">Отменить заказ</string>
    <string name="about_company">О компании</string>
    <string name="schedule">График</string>
    <string name="total">Итого: </string>
    <string name="change_language">Сменить язык</string>
    <string name="russian">Русский</string>
    <string name="uzbek">O\'zbek</string>
    <string name="info">Здесь должна быть информация о вашем компании.\nНо увы, его тут нет)</string>
    <string name="return_sent">Ваш запрос на возврат успешно отправлено модераторам. \nЖдите звонка нашего сотрудника.</string>
    <string name="done">Готово!</string>
    <string name="title_activity_view_good">ScrollingActivity</string>

</resources>