<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_icons8_home_page"
            android:title="@string/main" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_icons8_shopping_cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_icons8_list"
            android:title="@string/orders" />

        <item
            android:id="@+id/nav_return"
            android:icon="@drawable/ic_icons8_return_purchase"
            android:title="@string/return_" />

    </group>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_icons8_male_user"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_icons8_exit"
                android:title="@string/exit" />
        </menu>
    </item>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_icons8_online_support_1"
                android:title="@string/support" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_icons8_info"
                android:title="@string/about_company" />

        </menu>
    </item>


</menu>