<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:gravity="center"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent"
    android:theme="@style/LogIn"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="250dp"
        android:src="@drawable/logo"
        android:layout_height="100dp"/>

    <LinearLayout
        android:layout_width="300dp"
        android:orientation="vertical"
        android:gravity="center"
        android:animateLayoutChanges="true"
        android:id="@+id/login"
        android:visibility="visible"
        android:layout_marginTop="34dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/phone"
            android:textSize="18dp"
            android:textColor="@color/coloWhite"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:inputType="phone"
            android:textColor="@color/coloWhite"
            android:text="+998999067374"
            android:id="@+id/etTel"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/password"
            android:layout_marginTop="12dp"
            android:textSize="18dp"
            android:textColor="@color/coloWhite"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/etPass"
            android:text="218977"
            android:inputType="numberPassword"
            android:textColor="@color/coloWhite"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:text="@string/login"
            android:background="@drawable/btn_hight_contrast"
            android:layout_margin="12dp"
            android:textStyle="bold"
            android:paddingRight="12dp"
            android:id="@+id/btnLogin"
            android:drawablePadding="4dp"
            android:paddingLeft="12dp"
            android:drawableRight="@drawable/ic_icons8_login"
            android:textColor="@color/colorAccent"
            android:layout_height="46dp"/>
        <ProgressBar
            android:layout_width="46dp"
            android:id="@+id/progress"
            android:layout_margin="12dp"
            android:visibility="gone"
            android:layout_height="46dp"/>

        <Button
            android:layout_width="wrap_content"
            android:background="@drawable/btn_hight_contrast"
            android:layout_margin="12dp"
            android:text="@string/support"
            android:visibility="gone"
            android:paddingLeft="12dp"
            android:id="@+id/btnSupportPass"
            android:paddingRight="12dp"
            android:textColor="@color/colorAccent"
            android:layout_height="32dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:id="@+id/notConnection"
        android:visibility="gone"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="80dp"
            android:src="@drawable/ic_icons8_sad_cloud"
            android:layout_height="80dp"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/noInternetConnection"
            android:gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textSize="18dp"
            android:textColor="@color/coloWhite"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:background="@drawable/btn_hight_contrast"
            android:padding="8dp"
            android:id="@+id/btnRefreash"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_icons8_update_left_rotation"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:id="@+id/blockedUser"
        android:visibility="gone"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="60dp"
            android:src="@drawable/ic_icons8_lock"
            android:layout_height="60dp"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/blockedUser"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textSize="18dp"
            android:textColor="@color/coloWhite"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:background="@drawable/btn_hight_contrast"
            android:layout_margin="12dp"
            android:text="@string/support"
            android:paddingLeft="12dp"
            android:id="@+id/btnSupport"
            android:paddingRight="12dp"
            android:textColor="@color/colorAccent"
            android:layout_height="32dp"/>
    </LinearLayout>

</LinearLayout>