<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        app:cardCornerRadius="24dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:maxLines="5"
                android:ellipsize="end"
                android:layout_marginLeft="12dp"
                android:textColor="#444444"
                android:textSize="18dp"
                android:textStyle="bold"
                android:id="@+id/tvError"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/change_language"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/colorText"
                android:alpha=".3"/>
            <TextView
                android:layout_width="match_parent"
                android:padding="12dp"
                android:clickable="true"
                android:id="@+id/tvUZB"
                android:background="?selectableItemBackground"
                android:drawableLeft="@drawable/ic_icons8_uzbekistan"
                android:gravity="center_vertical"
                android:drawablePadding="12dp"
                android:text="@string/uzbek"
                android:textColor="@color/colorText"
                android:textSize="16dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:padding="12dp"
                android:clickable="true"
                android:id="@+id/tvRUS"
                android:background="?selectableItemBackground"
                android:drawableLeft="@drawable/ic_icons8_russian_federation"
                android:gravity="center_vertical"
                android:drawablePadding="12dp"
                android:text="@string/russian"
                android:textColor="@color/colorText"
                android:textSize="16dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>