<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ViewGoodActivity"
    tools:showIn="@layout/activity_view_good">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#444"
            android:id="@+id/tvTitle"
            android:textStyle="bold"
            android:text="Prodict title"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="#888"
            android:gravity="right"
            android:layout_marginTop="4dp"
            android:text="@string/price"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#444"
            android:gravity="right"
            android:id="@+id/tvPrice"
            android:textStyle="bold"
            android:text="36 999 сумм"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="#888"
            android:layout_marginTop="12dp"
            android:text="@string/description"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:id="@+id/tvDescription"
            android:textColor="#444"
            android:text="Prodict title"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="#888"
            android:layout_marginTop="12dp"
            android:text="@string/payment_method"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:id="@+id/tvPaymentMethod"
            android:textColor="#444"
            android:text="Prodict title"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="#888"
            android:layout_marginTop="12dp"
            android:text="@string/in_stock"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:id="@+id/tvInStock"
            android:textColor="#444"
            android:text="Prodict title"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>