<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetalisActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderDetalisList"
        android:layout_width="match_parent"
        android:numColumns="1"
        android:listSelector="#00000000"
        android:paddingBottom="120dp"
        android:clipToPadding="false"
        android:horizontalSpacing="0dp"
        android:verticalSpacing="0sp"
        android:layout_height="match_parent" />

    <TextView
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/tvEmpty"
        android:visibility="gone"
        android:drawableTop="@drawable/empty"
        android:textSize="18dp"
        android:gravity="center"
        android:drawablePadding="12dp"
        android:text="@string/empty"
        android:textColor="#444"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:id="@+id/llLoading"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="#444"
            android:textSize="18dp"
            android:text="@string/loading"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/llBottomBar"
        android:visibility="visible"
        android:background="@color/coloWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@id/send_order"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:id="@+id/tvTotalPrice"
            android:textSize="18dp"
            android:text="@string/total"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="4"
            android:id="@+id/llActions"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:id="@+id/btnSave"
                android:text="@string/save_changes"
                android:textColor="@color/coloWhite"
                android:background="@drawable/btn_success"
                android:layout_weight="3"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnCancel"
                android:src="@drawable/ic_icons8_cancel"
                android:background="@drawable/btn_primary"
                android:padding="12dp"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>