<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartList"
        android:layout_width="match_parent"
        android:numColumns="1"
        android:listSelector="#00000000"
        android:paddingBottom="58dp"
        android:clipToPadding="false"
        android:horizontalSpacing="0dp"
        android:verticalSpacing="0sp"
        android:layout_height="match_parent" />

    <TextView
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/tvEmpty"
        android:visibility="gone"
        android:drawableTop="@drawable/empty"
        android:textSize="18dp"
        android:drawablePadding="12dp"
        android:text="@string/empty"
        android:textColor="#444"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:id="@+id/llLoading"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="#444"
            android:textSize="18dp"
            android:text="@string/loading"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_primary"
        android:padding="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:clickable="true"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="32dp"
            android:src="@drawable/ic_icons8_buy"
            android:layout_marginRight="6dp"
            android:layout_height="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/arrange_order"
            android:textColor="@color/coloWhite"
            android:textSize="18dp"
            android:layout_margin="4dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>